addFirst() addLast() removeFirst() removeLast() on linked list